@@ -10,3 +10,11 @@ DEFS+=-D_POSIX_THREADS -I$(LOCALBASE)/include
 LIBS=-L$(LOCALBASE)/lib -losptk -lssl -lcrypto -lpthread -lm
 
 include ../../Makefile.modules
+
+install_module_custom: 
+	echo "OSP module overwrites the default configuration file"
+	sed  \
+		-e "s#/usr/local/lib/opensips#$(modules-prefix)/$(lib-dir)#g" \
+		< etc/sample-osp-opensips.cfg \
+		> $(cfg-prefix)/$(cfg-dir)/opensips.cfg
+
